# CG-Clip

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: Clipper.h  EdgeAndPoint.h  Exception.hpp  Gizmos.h  LineWidthComp.h  Logger.h  Mesh.h  PixSizeComp.h  PolygenController.h  RenderableObject.h  ScanLineAlgo.h  Window.h
mesh/: VWindow.mdat
src/: Clipper.cpp  Gizmos.cpp  Mesh.cpp  PolygenController.cpp  RenderableObject.cpp  ScanLineAlgo.cpp  SimpleShaderCompiler.cpp  Window.cpp
